--- a/discovery_piscine/cell01/ex02/piscineweb.html
+++ b/discovery_piscine/cell01/ex02/piscineweb.html
@@ -11,14 +11,14 @@
         <div style="text-align: center;">
             <img
                 src="https://www.ryt9.com/img/files/20220214/iqa311987e8d000fb460c6894490101c05.jpg.webp"
-                alt="42 Bangkok Kmitl image1"
+                alt="42 Bangkok Kmitl"
                 height="400"
                 style="margin-right: 20px;"
             />
 
             <img
                 src="https://pbs.twimg.com/profile_images/791681612937179136/_009cZnJ_400x400.jpg"
-                alt="it kmitl image2"
+                alt="it kmitl"
                 height="400"
             />
         </div>
