Auto Format Code

--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -8,12 +8,12 @@
     <body>
         <h1 style="text-align: center; font-size: 150px">Piscine Web</h1>
 
-        <div style="text-align: center;">
+        <div style="text-align: center">
             <img
                 src="https://www.ryt9.com/img/files/20220214/iqa311987e8d000fb460c6894490101c05.jpg.webp"
                 alt="42 Bangkok Kmitl"
                 height="400"
-                style="margin-right: 20px;"
+                style="margin-right: 20px"
             />
 
             <img
