--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -33,7 +33,12 @@
         </div>
         <hr />
         <div
-            style="text-align: right; font-style: italic; font-family: monospace;">
+            style="
+                text-align: right;
+                font-style: italic;
+                font-family: monospace;
+            "
+        >
             © wil 2026
         </div>
     </body>
