--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cell02-ex00</title>
-  <link rel="stylesheet" href="responsive.css">
-</head>
-<body>
-  <table>
-    <tr>
-      <td class="a">Hello</td>
-      <td class="b">42 Bangkok</td>
-    </tr>
-  </table>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>cell02-ex00</title>
+        <link rel="stylesheet" href="responsive.css" />
+    </head>
+    <body>
+        <table>
+            <tr>
+                <td class="a">Hello</td>
+                <td class="b">42 Bangkok</td>
+            </tr>
+        </table>
+    </body>
 </html>
