--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cell02-ex02</title>
-    <link rel="stylesheet" href="parallax.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>cell02-ex02</title>
+        <link rel="stylesheet" href="parallax.css" />
+    </head>
+    <body>
+        <div class="parallax image1">
+            <div class="text">Welcome to Fun with coding</div>
+        </div>
 
-    <div class="parallax image1">
-        <div class="text">Welcome to Fun with coding</div>
-    </div>
+        <div class="black">
+            <p>42 Bangkok</p>
+        </div>
 
-    <div class="black">
-        <p>42 Bangkok</p>
-    </div>
-
-    <div class="parallax image2">
-        <div class="text">The End</div>
-    </div>
-
-</body>
+        <div class="parallax image2">
+            <div class="text">The End</div>
+        </div>
+    </body>
 </html>
