--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -7,7 +7,9 @@
         <title>cell03-ex00</title>
     </head>
     <body>
-        <button class="btn" onclick="changeBackground()">Change background</button>
+        <button class="btn" onclick="changeBackground()">
+            Change background
+        </button>
     </body>
 
     <script>
