--- a/cell03/ex02/calc.html
+++ b/cell03/ex02/calc.html
@@ -5,8 +5,8 @@
         <title>It's over 9000</title>
     </head>
     <body>
-      <div style="text-align: center; justify-content: center;">
-          <h1>calculator</h1>
+        <div style="text-align: center; justify-content: center">
+            <h1>calculator</h1>
             <input type="text" id="left" />
             <select id="op">
                 <option value="+">+</option>
