--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -8,15 +8,15 @@
     <body>
         <h1 style="text-align: center; font-size: 150px">Piscine Web</h1>
 
-        <div style="text-align: center;">
-          <a href="https://www.youtube.com/watch?v=INscMGmhmX4">
-            <img
-                src="https://www.ryt9.com/img/files/20220214/iqa311987e8d000fb460c6894490101c05.jpg.webp"
-                alt="42 Bangkok Kmitl"
-                height="400"
-                style="margin-right: 20px;"
-            />
-          </a>
+        <div style="text-align: center">
+            <a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+                <img
+                    src="https://www.ryt9.com/img/files/20220214/iqa311987e8d000fb460c6894490101c05.jpg.webp"
+                    alt="42 Bangkok Kmitl"
+                    height="400"
+                    style="margin-right: 20px"
+                />
+            </a>
 
             <img
                 src="https://pbs.twimg.com/profile_images/791681612937179136/_009cZnJ_400x400.jpg"
